完成基本游戏面板排布及游戏的开始及完成功能

--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-<div id = "main" style = "margin: 0px auto; width: 1600px; height: 1600px; background-color: green">
+<div id = "puzzle_game" >
+	<div id = "main" >
+		<div id = "puzzle" >
+
+		</div>
+		<div id = "control">
+			<div>Time</div>
+			<div>00:00</div>
+			<input id= "start_btn" type ="button" value= "Start"></div>
+		</div>
+	</div>
 	<script src = "puzzle.js" >
 	</script>
-
 </div>
 </body>
 </html>
