--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -14,7 +14,7 @@
 		</div>
 		<div id = "control">
 			<div>Time</div>
-			<div>00:00</div>
+			<div id ="timer">00:00</div>
 			<input id= "start_btn" type ="button" value= "Start"></div>
 		</div>
 	</div>
