完善性修改
1.是有了开始游戏时预览图片的功能
2.修正计时器在多次按开始后会变快的问题
3.图像会自动居中

--- a/puzzle/puzzle.html
+++ b/puzzle/puzzle.html
@@ -15,7 +15,7 @@
 		<div id = "control">
 			<div>Time</div>
 			<div id ="timer">00:00</div>
-			<input id= "start_btn" type ="button" value= "Start"></div>
+			<input id= "start_btn" type ="button" value= "START!"></div>
 		</div>
 	</div>
 	<script src = "puzzle.js" >
