--- a/makebigger/index.html
+++ b/makebigger/index.html
@@ -95,11 +95,13 @@
 	<div id="start">
 		<div>
 			<h1>游戏规则:</h1>
-			<p>1.点下鼠标（左或右键），产生球</p>
-			<p>2.压着鼠标键时，左右拖以找到合适的下落点</p>
-			<p>3.释放按键，使球下落</p>
-			<p>4.相同球碰撞会融合成更大的球</p>
-			<p>5.获得更多的球，以获得更高的积分吧！！</p>
+			<p>
+			<li>1.点下鼠标（左或右键），产生球</li>
+			<li>2.压着鼠标键时，左右拖以找到合适的下落点</li>
+			<li>3.释放按键，使球下落</li>
+			<li>4.相同球碰撞会融合成更大的球</li>
+			<li>5.获得更多的球，以获得更高的分数吧！！</li>
+			</p>
 		</div>
 		<div>
 			<div class="ok_btn" onclick="on_start_btn_click()">开始</div>
@@ -115,7 +117,6 @@
 		</div>
 	</div>
 	
-	<!-- <div class="footer-banner" style="position:absolute;bottom:-300px;left:-200px;width:728px; margin:30px auto"></div> -->
 	<script src="assets/protoclass.js"></script>
 	<script src='assets/box2d.js'></script>
 	<script src='assets/ETools.js'></script>
