--- a/makebigger/index.html
+++ b/makebigger/index.html
@@ -5,32 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta http-equiv="Content-Type" content="text/html; charset = UTF-8" />
 		<title>合合大大</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link type="text/css" rel="styleSheet"  href="style.css" />
+		
 	</head> 
 	<body>
-		<div class="box">
-			<div class="top">
-				<div class="left"><img src="assets/image/left_top.gif"/></div>
-				<div class="center"><img src="assets/image/top.gif"/></div>
-				<div class="right"><img src="assets/image/right_top.gif"/></div>
-			</div>
-			<div class="middle">
-				<div class="left"><img src="assets/image/left.gif"/></div>
-				<div class="center"></div>
-				<div class="right"><img src="assets/image/right.gif"/></div>
-			</div>
-			<div class="bottom">
-				<div class="left"><img src="assets/image/left_bottom.gif"/></div>
-				<div class="center"><img src="assets/image/bottom.gif"/></div>
-				<div class="right"><img src="assets/image/right_bottom.gif"/></div>
-			</div>
-		</div>
-
-		<!--
+	<div id="canvas_show">
 		<div id="canvas">
-			<div id="score"> 大：0</div>
+			<div id="score"><img src="assets/images/score.gif"/><div id="current_score">0</div></div>
 		</div>
-		-->
+	</div>
+	<div id="start_show">
 		<div id="start">
 			<div>
 				<h1>游戏规则:</h1>
@@ -43,24 +27,32 @@
 				</p>
 			</div>
 			<div>
-				<div class="ok_btn" onclick="on_start_btn_click()">开始</div>
+				<div class="ok_btn" onclick="on_start_btn_click()"></div>
 			</div>
 		</div>
-		
+	</div>
+	<div id="result_show">
 		<div id="result" >
 			<div class="result_title">GAME OVER </div>
 			<div id="result_lst">总共大大的数目：</div>
 			<div>
-				<div class="ok_btn" onclick="on_replay_btn_click()">再打一局</div>
-				<div class="ok_btn" onclick="on_goto_menu_click()">返回菜单</div>
+				<div class="ok_btn" onclick="on_goto_menu_click()"></div>
 			</div>
 		</div>
-
-
-		
+	</div>
 		<script src="assets/protoclass.js"></script>
 		<script src='assets/box2d.js'></script>
 		<script src='assets/ETools.js'></script>
+		
+		<script type="text/javascript">
+			var temp_node = document.getElementById("canvas_show");
+			CreateBackShow(temp_node, "out", 66, 73, ".gif");
+			temp_node = document.getElementById("result_show");
+			CreateBackShow(temp_node, "out", 66, 73, ".gif");
+			temp_node = document.getElementById("start_show");
+			CreateBackShow(temp_node, "out", 66, 73, ".gif");
+		</script>
+		
 		<script src='assets/Scene.js'></script>
 		<script src='assets/Ball.js'></script>
 		<script src='assets/GameStateMgr.js'></script>
