增加了打击效果

--- a/makebigger/index.html
+++ b/makebigger/index.html
@@ -9,6 +9,9 @@
 		
 	</head> 
 	<body>
+		<div id="test_anim">
+		</div>
+
 	<div id="canvas_show">
 		<div id="canvas">
 			<div id="score"><img src="assets/images/score.gif"/><div id="current_score">0</div></div>
